# jaxlibxc

./: .gitignore  .readthedocs.yaml  AUDIT_RESULTS.md  CLAUDE.md  NOTICE  README.md  pyproject.toml
docs/: conf.py  index.md  installation.md  quickstart.md  requirements.txt
docs/_build/html/: .buildinfo  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs/_build/html/.doctrees/: contributing.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: contributing.md.txt
docs/_build/html/api/: autodiff.html  constants.html  exchange.html  functional.html  gga.html  index.html  lda.html  (+7 more)
docs/api/: autodiff.md  functional.md  index.md  lda.md  mgga.md  mixed.md  types.md  utils.md
docs/user_guide/: derivatives.md
jaxc/: __init__.py  _autodiff.py  _constants.py  _exchange.py  _transforms.py  _types.py  _utils.py
jaxc/gga/: c_lyp.py  x_b88.py  x_pbe.py
jaxc/lda/: c_pw.py
jaxc/mgga/: __init__.py
jaxc/tests/: conftest.py  test_external_validation.py  test_gga.py  test_lda.py  test_mgga.py
jaxlibxc/: __init__.py  _autodiff.py  _constants.py  _mixed.py  _numerical.py  _registry.py  _transforms.py  _types.py  functional.py
jaxlibxc/gga/: __init__.py  _mixed.py  c_pbe.py  c_pw91.py  x_pbe.py
jaxlibxc/lda/: __init__.py  c_vwn.py  x.py
jaxlibxc/mgga/: c_scan.py  x_scan.py
jaxlibxc/tests/: conftest.py  test_external_validation.py  test_gga.py  test_lda.py  test_mgga.py
(+37 files in other folders)
